# csv_processor

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
app/: cli.py  main.py  processor.py  table.py
csv_processor.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py  test_main.py  test_processor.py  test_table.py
