[project]
name = "csv_processor"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "tabulate",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"

[tool.setuptools]
packages = ["app", "tests"]
